# simple-eval-harness

./: .gitignore  analyze_result.py  ep-20250123001618-2sk2j_temp_0.6_rep_1.0_chat_True_evaluator  eval.py  eval.sh  eval_results.json  pyproject.toml  setup.py  template_api.py  token_soup.py
eval_output/: processed_aime24_test_QwQ-32B_2000.jsonl  processed_aime24_test_QwQ-32B_20000.jsonl  processed_aime24_test_QwQ-32B_30000.jsonl
metric/: __init__.py  aime.py  evaluator.py  omini_math.py
simple_eval_harness/: analyze_result.py  compare_result.py  eval.py  run_mt.py
simple_eval_harness/metric/: aime.py  evaluator.py  omini_math.py  ugphysics.py
simple_eval_harness/prompts/: __init__.py  critic_prompt.py
simple_eval_harness/utils/: read_hf_dataset.py  token_soup.py
utils/: llm_as_judge.py
