[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_eval_harness"
version = "0.1.0"
authors = [
    {name = "eyuansu71", email = "eyuansu71@gmail.com"}
]
description = "A simple evaluation harness"
dependencies = [
    "math-verify",
    "datasets",
    "sqlitedict",
    "tenacity",
    "python-Levenshtein",
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["simple_eval_harness"]

[project.scripts]
simple_eval = "simple_eval_harness.eval:main"